# group_project_photoapp

./: .gitignore  Dockerfile  README.md  env.txt  main.py  pyproject.toml  readme.txt  test.py  test.sqlite  test_runner.py
migrations/: alembic.ini  env.py
migrations/versions/: 1253b811b13f_anotade.py  244ab01ccbe4_add_user_confirmed.py  48b16d45cf55_init.py  5fd5ebeadeab_add_mapped_list.py  65c53e2ea5d5_create_models.py  6bda02dea785_init.py  9c548bf65716_init_2.py  b75a06d98dac_init.py  bc244458c340_add_maped.py  cc057a8a4dbb_anotade_new_.py  f20dfb619933_anotade_new.py
src/conf/: config.py  messages.py
src/database/: db.py  models.py
src/repository/: addressbook.py  comments.py  filter.py  photos.py  picture.py  pictures.py  rating.py  ratings.py  tags.py  users.py
src/routes/: addressbook.py  auth.py  comments.py  filter.py  photos.py  picture.py  pictures.py  rating.py  ratings.py  tags.py  users.py
src/schemas/: addressbook.py  comments.py  filter.py  filters.py  photos.py  picture.py  pictures.py  tags_schema.py  user.py  users.py
src/services/: auth.py  claud_image.py  cloud_picture.py  qrcode_generator.py  roles.py
templates/: index.html
tests/: comment_error.txt  test_pictures.py  test_repository_comments.py  test_repository_pictures.py  test_repository_tags.py  test_repository_users.py  test_route_comment.py  test_route_create_login_user.py  test_route_tags.py
