[tool.poetry]
name = "web-hw-11-fastapi-contacts"
version = "0.1.0"
description = ""
authors = ["Revuka Oleksandr <a.revuka@gmail.com>"]
readme = "README.md"
packages = [{include = "web_hw_11_fastapi_contacts"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.19"
alembic = "^1.11.2"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
phonenumbers = "^8.13.20"
jinja2 = "^3.1.2"
jose = "^1.0.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"
libgravatar = "^1.0.4"
python-multipart = "^0.0.6"
logging = "^0.4.9.6"
psycopg2-binary = "^2.9.7"
pydantic = {extras = ["email"], version = "^2.4.0"}
fastapi-mail = "^1.4.1"
redis = "^4.6.0"
fastapi-limiter = "^0.1.5"
cloudinary = "^1.35.0"
asyncpg = "^0.28.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
mypy = "^1.4.1"
black = "^23.3.0"
coverage = "^7.2.7"
pre-commit = "^3.3.3"
pyupgrade = "^3.7.0"
ruff = "^0.0.275"
rich = "^13.4.2"
faker = "^19.6.2"
aiosqlite = "^0.19.0"
types-redis = "^4.6.0.7"
types-python-jose = "^3.3.4.8"
types-passlib = "^1.7.7.13"
sphinx = "^7.2.6"
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"


[tool.poetry.group.test.dependencies]
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = [
    "^postgres-data",
    '^config\.py$'
]

[[tool.mypy.overrides]]
module = [
    "libgravatar",
    "cloudinary",
    "cloudinary.uploader",
    "fastapi_limiter",
    "fastapi_limiter.depends",
    "redis",
    "redis.asyncio",

]
ignore_missing_imports = true

[tool.ruff]
line-length=130

[tool.coverage.run]
omit = [
    "test_repository_addressbook.py",
    "test_runner.py",
    "__init__.py",
]

[tool.pytest.ini_options]
pythonpath = ["."]