[tool.poetry]
name = "group-project-photoapp"
version = "0.1.0"
description = ""
authors = ["Digital future"]
readme = "README.md"
packages = [{include = "group_project_photoapp"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "2.0.19"
fastapi = "0.103.1"
uvicorn = {version = "0.23.2", extras = ["standard"]}
jinja2 = "3.1.2"
passlib = "1.7.4"
python-jose = "3.3.0"
libgravatar = "1.0.4"
logging = "0.4.9.6"
pydantic = {version = "2.4.0", extras = ["email"]}
fastapi-mail = "1.4.1"
redis = "4.6.0"
fastapi-limiter = "0.1.5"
cloudinary = "1.35.0"
asyncpg = "0.28.0"
python-multipart = "0.0.6"
psycopg2-binary = "2.9.7"
alembic = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
